# LLM-Invoice-Sorter

./: .env.example  .gitignore  README.md  example.credentials.json  generate_reisekosten_excel.py  main.py  pyproject.toml
scripts/: manual-email-review.py
